# mcu_rnn_denoise

./: CMakeLists.txt
